TEST_PROGRAMS/INVALID/04/9.go
package main

func main() {
    //Illegal single-quote in rune
    var x = '''
    x++ // "use" x
}
